# DIAAD

./: .gitignore  README.md  example_config.yaml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  streamlit_app.py
docs/: lineage.md  windows_test_execution.md
docs/manual/: 00_outline.md  01_introduction.md  02_installation.md  manual_pdf.yaml
docs/manual/01_overview/: 01_01_introduction.md  01_03_configuration.md  01_04_commands_methodolgy.md  01_introduction.md  02_manual_organization.md  03_functional_overview.md  03_methodolgical_overview.md  04_functional_overview.md
docs/manual/02_features/: 03_generated_example_io.md
docs/manual/02_operation/: 01_installation.md  02_command_line.md  03_webapp.md  04_configuration.md  05_testing.md
docs/manual/03_features/: 01_transcript_tabularization.md  02_word_counting_vs_target_vocabulary_coverage.md  03_exact_file_name_matching.md  04_generated_example_io.md
docs/manual/04_operation/: 04_01_overview.md
example_config/: example_advanced.yaml  example_project.yaml
manual/04_operation/: 04_01_overview.md
manual/04_operation/04_02_butu_pipeline_functions/: 04_02_02_func_3a.md  04_02_03_func_3b.md  04_02_04_func_4a.md  04_02_06_func_6a.md  04_02_07_func_6b.md  04_02_09_func_7b.md  04_02_11_func_9b.md  04_02_12_func_10a.md  04_02_13_func_10b.md
reqs/: base.txt  dev.txt  full.in  full.txt  nlp.txt  web.txt
scripts/: run_tests.ps1
src/diaad/: __init__.py  cli.py  main.py  run_wrappers.py
src/diaad/POWERS/: analyze_POWERS_coding.py  automation_validation.py  powers_coding_analysis.py  powers_coding_files.py  prep_POWERS_coding_files.py  (+1 more)
src/rascal/: cli.py  main.py
tests/: conftest.py  helpers.py  test_main.py  test_webapp_command_menu.py  test_webapp_launcher.py
tests/test_POWERS/: test_analyze_POWERS_coding.py  test_prep_POWERS_coding_files.py  test_validate_automation.py
tests/test_blinding/: test_commands.py
tests/test_cli/: test_commands.py  test_dispatch.py  test_parser.py
tests/test_coding/: test_corelex_analyze.py  test_cus_analyze.py  test_cus_evaluate.py  test_cus_make.py  test_cus_summarize.py  test_cus_words_reselect.py  test_words_evaluate.py  test_words_make.py
tests/test_convo_turns/: test_digital_convo_turns_analyzer.py
tests/test_core/: test_config.py  test_config_overrides.py  test_provenance.py  test_run_context.py  test_run_wrappers.py
tests/test_examples/: __init__.py  test_examples.py
tests/test_metadata/: test_blinding.py  test_discovery.py  test_unblinding.py  test_utils.py
tests/test_powers/: test_analyze_powers_coding.py  test_make_powers_coding_files.py  test_validate_automation.py
tests/test_transcripts/: test_cha_files.py  test_detabularization.py  test_transcript_tables.py  test_transcription_reliability_evaluation.py  test_transcripts_evaluate.py  test_transcripts_make.py  test_transcripts_reselect.py  test_transcripts_select.py
tests/test_utils/: test_auxiliary.py  test_read_cha_files.py  test_tiers.py
webapp/: config_builder.py  streamlit_app.py
(+441 files in other folders)
