[metadata]
name = diaad
version = 0.1.0
description = Digital Interface for Aggregate Analysis of Dialog
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick McCloskey
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy>=1.26
    pandas>=2.0.3
    pingouin>=0.5.5
    scikit-learn>=1.7.2
    scipy>=1.16.2
    spacy>=3.8.7
    streamlit>=1.45.1
    tqdm>=4.67.1
    rascal_speech>=0.2.0
    spacy[transformers]>=3.8
    https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest